terraform/RedTeam/RedTeam-SG3.tf
resource "azurerm_network_security_group" "RedTeamSG3" {
  name                = format("%sSecurityGroup3", var.resource_group_name)
  location            = azurerm_resource_group.rg.location
  resource_group_name = azurerm_resource_group.rg.name

  security_rule {
    name                       = "Default-Deny"
    priority                   = 4096
    direction                  = "Inbound"
    access                     = "Deny"
    protocol                   = "*"
    source_port_range          = "*"
    destination_port_range     = "*"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
    description = "Deny all inbound traffic."
  }
}
